MLPAB-242 Fix page flows (#133)

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -100,7 +100,7 @@
     "chooseYourCertificateProvider": "Welsh",
     "checkAndSendToYourCertificateProvider": "Welsh",
     "payForTheLpa": "Welsh",
-    "confirmYourIdentity": "Welsh",
+    "confirmYourIdentityAndSign": "Welsh",
     "signAndRegisterTheLpa": "Welsh",
     "signTheLpa": "Welsh",
 
@@ -238,5 +238,16 @@
     "iWouldLikeSomeoneElseToConfirmMyDetails": "Welsh",
     "iWouldLikeToConfirmMyIdentityInPerson": "Welsh",
     "selectAtLeastThreeIdentityOptions": "Welsh",
-    "selectValidIdentityOption": "Welsh"
+    "selectValidIdentityOption": "Welsh",
+
+    "yourChosenDocuments": "Welsh",
+    "yourChosenDocumentsContent": "Welsh:",
+    "wellConfirmYourIdentityUsing": "Welsh {{.FirstChoice}} {{.SecondChoice}} {{.DonorFirstNames}} {{.DonorLastName}}.",
+    "passport": "Welsh",
+    "drivingLicence": "Welsh",
+    "governmentGatewayAccount": "Welsh",
+    "dwpAccount": "Welsh",
+    "onlineBankAccount": "Welsh",
+    "utilityBill": "Welsh",
+    "councilTaxBill": "Welsh"
 }
