Add notify client

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -224,6 +224,7 @@
     "selectReadAndCheckedLpa": "Welsh",
     "selectConfirmMadeThisLpaOfOwnFreeWill": "Welsh",
     "enterSignatureCode": "Welsh",
+    "enterCorrectSignatureCode": "Welsh",
 
     "selectYourIdentityOptions": "Welsh",
     "selectAllAtLeastThree": "Welsh",
