Add full validation rules for donor details

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -33,11 +33,15 @@
     "month": "Welsh",
     "year": "Welsh",
     "enterFirstName": "Welsh",
+    "firstNamesTooLong": "Welsh",
     "enterLastName": "Welsh",
-    "dateOfBirthDay": "Welsh",
-    "dateOfBirthMonth": "Welsh",
-    "dateOfBirthYear": "Welsh",
+    "lastNameTooLong": "Welsh",
+    "otherNamesTooLong": "Welsh",
+    "enterDateOfBirth": "Welsh",
     "dateOfBirthMustBeReal": "Welsh",
+    "dateOfBirthIsFuture": "Welsh",
+    "dateOfBirthIsUnder18": "Welsh",
+    "dateOfBirthIsOver100": "Welsh",
 
     "homeAddress": "Welsh",
     "postcode": "Welsh",
