--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -33,11 +33,15 @@
     "month": "Month",
     "year": "Year",
     "enterFirstNames": "Enter first names",
+    "firstNamesTooLong": "Enter a first name that's less than 54 characters long",
     "enterLastName": "Enter last name",
-    "dateOfBirthDay": "Date of birth must include a day",
-    "dateOfBirthMonth": "Date of birth must include a month",
-    "dateOfBirthYear": "Date of birth must include a year",
+    "lastNameTooLong": "Enter a last name that's less than 62 characters long",
+    "otherNamesTooLong": "Enter other names that are less than 51 characters long",
+    "enterDateOfBirth": "Enter date of birth",
     "dateOfBirthMustBeReal": "Date of birth must be a real date",
+    "dateOfBirthIsFuture": "Date of birth must be before today",
+    "dateOfBirthIsUnder18": "The donor is under 18. I understand that the donor must be at least 18 on the date they sign the LPA, otherwise the LPA will be rejected.",
+    "dateOfBirthIsOver100": "By saving this section, you confirm that the person is more than 100 years old. If not, please change the date.",
 
     "homeAddress": "Home address",
     "postcode": "Postcode",
