Add test to check language files have the same keys

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -32,7 +32,7 @@
     "day": "Welsh",
     "month": "Welsh",
     "year": "Welsh",
-    "enterFirstName": "Welsh",
+    "enterFirstNames": "Welsh",
     "firstNamesTooLong": "Welsh",
     "enterLastName": "Welsh",
     "lastNameTooLong": "Welsh",
@@ -62,6 +62,9 @@
     "enterAddress": "Welsh",
     "enterTownOrCity": "Welsh",
     "couldNotLookupPostcode": "Welsh",
+    "addressLine1TooLong": "Welsh",
+    "addressLine2TooLong": "Welsh",
+    "addressLine3TooLong": "Welsh",
 
     "whoIsThisLpaFor": "Welsh",
     "forMe": "Welsh",
@@ -106,8 +109,7 @@
     "checkAndSendToYourCertificateProvider": "Welsh",
     "payForTheLpa": "Welsh",
     "confirmYourIdentityAndSign": "Welsh",
-    "signAndRegisterTheLpa": "Welsh",
-    "signTheLpa": "Welsh",
+    "registerTheLpa": "Welsh",
     "attorneysAdded": {
         "one": "Welsh {{.PluralCount}} welsh",
         "two": "Welsh {{.PluralCount}} welsh",
@@ -122,11 +124,12 @@
     "doYouWantToRemove": "Welsh {{ .FirstNames }} {{ .LastName }}?",
     "selectRemoveAttorney": "Welsh",
 
+    "whoWouldYouLikeToBeTheAttorneys": "Welsh",
     "whoWouldYouLikeToBeTheAttorneysDetailsTitle": "Welsh",
     "whoWouldYouLikeToBeTheAttorneysDetailsContent": "<p class=\"govuk-body\">Welsh</p>",
-
     "attorney": "Welsh",
     "enterEmail": "Welsh",
+    "emailIncorrectFormat": "Welsh",
     "attorneyAddress": "{{.FirstNames}} {{.LastName}}'s Welsh",
 
     "wantReplacementAttorneys": "Welsh",
@@ -247,6 +250,7 @@
 
     "selectYourIdentityOptions": "Welsh",
     "selectAllAtLeastThree": "Welsh",
+    "theYoti": "Welsh",
     "aPassport": "Welsh",
     "aDrivingLicence": "Welsh",
     "aGovernmentGatewayAccount": "Welsh",
