add missing translation

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -132,6 +132,7 @@
 
     "attorney": "Welsh",
     "enterEmail": "Welsh",
+    "emailIncorrectFormat": "Welsh",
     "attorneyAddress": "{{.FirstNames}} {{.LastName}}'s Welsh",
 
     "wantReplacementAttorneys": "Welsh",
