--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -294,6 +294,9 @@
     "howShouldAttorneysMakeDecisionsDetail": "The donor's choice here is very important as it affects how their LPA can be used. Whichever option the donor chooses, the attorneys must always act in the donor's best interests.",
     "getHelpMakingDecision": "Get help with making this decision",
     "jointlyAndSeverally": "Jointly and severally",
+    "jointlyAndSeverallyHint": "Attorneys can make decisions on their own or together. Most people choose this option because it's the most practical.",
     "jointly": "Jointly",
-    "jointlyAndSeverallyMixed": "Jointly for some decisions, and jointly and severally for other decisions"
+    "jointlyHint": "Attorneys must agree unanimously on every decision, however big or small. Be careful-if one of the attorneys can no longer act, none of the other attorneys will be able to act either, unless the donor states otherwise in their instructions.",
+    "jointlyAndSeverallyMixed": "Jointly for some decisions, and jointly and severally for other decisions",
+    "jointlyAndSeverallyMixedHint": "Attorneys must agree unanimously on some decisions, but can make others on their own. The donor must state which decisions need to be agreed unanimously."
 }
