--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -298,5 +298,6 @@
     "jointly": "Jointly",
     "jointlyHint": "Attorneys must agree unanimously on every decision, however big or small. Be careful-if one of the attorneys can no longer act, none of the other attorneys will be able to act either, unless the donor states otherwise in their instructions.",
     "jointlyAndSeverallyMixed": "Jointly for some decisions, and jointly and severally for other decisions",
-    "jointlyAndSeverallyMixedHint": "Attorneys must agree unanimously on some decisions, but can make others on their own. The donor must state which decisions need to be agreed unanimously."
+    "jointlyAndSeverallyMixedHint": "Attorneys must agree unanimously on some decisions, but can make others on their own. The donor must state which decisions need to be agreed unanimously.",
+    "details": "Details"
 }
