remove conditional logic from radios template

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -305,6 +305,7 @@
     "jointlyHint": "Welsh",
     "jointlyAndSeverallyMixed": "Welsh",
     "jointlyAndSeverallyMixedHint": "Welsh",
+    "decisionDetailsHint": "Welsh",
     "details": "Welsh",
     "chooseADecisionType": "Welsh",
     "provideDecisionDetails": "Welsh",
