--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -288,5 +288,20 @@
     "myLastingPowersOfAttorney": "My lasting powers of attorney",
     "signed": "Signed",
     "applicationNumber": "Application number",
-    "viewTheLpaProgress": "View the LPA progress"
+    "viewTheLpaProgress": "View the LPA progress",
+
+    "howShouldAttorneysMakeDecisions": "How should the attorneys make decisions?",
+    "howShouldAttorneysMakeDecisionsDetail": "The donor's choice here is very important as it affects how their LPA can be used. Whichever option the donor chooses, the attorneys must always act in the donor's best interests.",
+    "getHelpMakingDecision": "Get help with making this decision",
+    "jointlyAndSeverally": "Jointly and severally",
+    "jointlyAndSeverallyHint": "Attorneys can make decisions on their own or together. Most people choose this option because it's the most practical.",
+    "jointly": "Jointly",
+    "jointlyHint": "Attorneys must agree unanimously on every decision, however big or small. Be careful - if one of the attorneys can no longer act, none of the other attorneys will be able to act either, unless the donor states otherwise in their instructions.",
+    "jointlyAndSeverallyMixed": "Jointly for some decisions, and jointly and severally for other decisions",
+    "jointlyAndSeverallyMixedHint": "Attorneys must agree unanimously on some decisions, but can make others on their own. The donor must state which decisions need to be agreed unanimously.",
+    "decisionDetailsHint": "  Please tell us which decisions the donor wants to be made jointly. These decisions will be printed on a extra sheet that the donor will need to sign and date. Take a look at the guidance for examples of how the donor can make their wishes clear.",
+    "details": "Details",
+    "chooseADecisionType": "Select from the listed decision options",
+    "provideDecisionDetails": "Provide details on how your attorneys should act",
+    "removeDetails": "Only provide details on how attorneys should act if selecting Jointly for some decisions, and jointly and severally for other decisions"
 }
